@@ -17,8 +17,8 @@
     <revision>4.1.0</revision>
     <changelist>-SNAPSHOT</changelist>  <!-- Remove "-SNAPSHOT" for release -->
 
-    <java-version>17</java-version>
-    <jdk-version>17</jdk-version>
+    <java-version>20</java-version>
+    <jdk-version>20</jdk-version>
     <enforcer.jdk-version>[${jdk-version},)</enforcer.jdk-version>
     <enforcer.maven-version>[3.5.3,)</enforcer.maven-version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -26,36 +26,40 @@
 
     <app.version>${revision}${changelist}</app.version>
     <felix.framework.version>7.0.5</felix.framework.version>
-    <flatlaf.version>2.6</flatlaf.version>
+    <flatlaf.version>3.1.1</flatlaf.version>
     <miglayout.version>11.0</miglayout.version>
     <xz.version>1.9</xz.version>
 
-    <osgi.cmpn.version>8.0.0</osgi.cmpn.version>
+    <osgi.core.version>8.0.0</osgi.core.version>
+    <osgi.promise.version>8.1.0</osgi.promise.version>
+    <osgi.annotation.version>8.1.0</osgi.annotation.version>
+    <osgi.component.version>1.5.1</osgi.component.version>
 
     <felix.gogo.version>1.1.6</felix.gogo.version>
     <felix.gogo.shell.version>1.1.4</felix.gogo.shell.version>
     <felix.gogo.command.version>1.1.2</felix.gogo.command.version>
     <felix.bundlerepository.version>2.0.10</felix.bundlerepository.version>
-    <felix.configadmin.version>1.9.24</felix.configadmin.version>
+    <felix.configadmin.version>1.9.26</felix.configadmin.version>
     <felix.prefs.version>1.1.0</felix.prefs.version>
-    <felix.scr.version>2.2.0</felix.scr.version>
+    <felix.scr.version>2.2.6</felix.scr.version>
     <felix.metatype.version>1.2.4</felix.metatype.version>
 
     <slf4j.version>1.7.36</slf4j.version>
     <sling.commons.log.version>3.0.2-r5</sling.commons.log.version>
     <dockingframes.version>1.1.4</dockingframes.version>
-    <weasis-dicom-tools.version>5.29.0.1</weasis-dicom-tools.version>
+    <weasis-dicom-tools.version>5.29.2</weasis-dicom-tools.version>
     <weasis.core.img.version>4.6.0</weasis.core.img.version>
     <weasis.opencv.native.version>4.6.0-dcm</weasis.opencv.native.version>
     <javax.json.version>1.1.6</javax.json.version>
     <jaxb.osgi.version>3.0.2</jaxb.osgi.version>
     <joml.version>1.10.5</joml.version>
-    <jackson.version>2.14.0</jackson.version>
-    <scribejava.version>8.3.2</scribejava.version>
-    <zip4j.version>2.11.2</zip4j.version>
+    <jogamp.version>2.4.0</jogamp.version>
+    <jackson.version>2.14.2</jackson.version>
+    <scribejava.version>8.3.3</scribejava.version>
+    <zip4j.version>2.11.4</zip4j.version>
 
-    <assertj.version>3.23.1</assertj.version>
-    <mockito.version>4.8.1</mockito.version>
+    <assertj.version>3.24.2</assertj.version>
+    <mockito.version>5.2.0</mockito.version>
   </properties>
 
   <licenses>
@@ -95,15 +99,16 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.10.1</version>
+          <version>3.11.0</version>
           <configuration>
             <release>${java-version}</release>
+            <compilerArgs>--enable-preview</compilerArgs>
           </configuration>
         </plugin>
         <plugin>
           <groupId>biz.aQute.bnd</groupId>
           <artifactId>bnd-maven-plugin</artifactId>
-          <version>6.3.1</version>
+          <version>6.4.0</version>
           <executions>
             <execution>
               <goals>
@@ -122,7 +127,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-install-plugin</artifactId>
-          <version>3.0.0-M1</version>
+          <version>3.1.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -132,12 +137,12 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
-          <version>3.0.0-M2</version>
+          <version>3.0.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>3.2.2</version>
+          <version>3.3.0</version>
           <configuration>
             <archive>
               <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
@@ -147,7 +152,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-release-plugin</artifactId>
-          <version>3.0.0-M6</version>
+          <version>3.0.0-M7</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -157,12 +162,12 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-resources-plugin</artifactId>
-          <version>3.2.0</version>
+          <version>3.3.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-site-plugin</artifactId>
-          <version>4.0.0-M2</version>
+          <version>4.0.0-M4</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -172,12 +177,12 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-dependency-plugin</artifactId>
-          <version>3.3.0</version>
+          <version>3.4.0</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-assembly-plugin</artifactId>
-          <version>3.4.1</version>
+          <version>3.4.2</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
@@ -197,7 +202,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-shade-plugin</artifactId>
-          <version>3.3.0</version>
+          <version>3.4.1</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
@@ -207,7 +212,7 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>flatten-maven-plugin</artifactId>
-          <version>1.2.7</version>
+          <version>1.3.0</version>
         </plugin>
         <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself. -->
         <plugin>
@@ -288,7 +293,7 @@
       <plugin>
         <groupId>com.diffplug.spotless</groupId>
         <artifactId>spotless-maven-plugin</artifactId>
-        <version>2.23.0</version>
+        <version>2.35.0</version>
         <configuration>
           <java>
             <googleJavaFormat/>
@@ -431,7 +436,7 @@
       <dependency>
         <groupId>org.osgi</groupId>
         <artifactId>osgi.promise</artifactId>
-        <version>${osgi.cmpn.version}</version>
+        <version>${osgi.promise.version}</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
@@ -590,20 +595,34 @@
     <dependency>
       <groupId>org.osgi</groupId>
       <artifactId>osgi.core</artifactId>
-      <version>${osgi.cmpn.version}</version>
+      <version>${osgi.core.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.apache.felix.configadmin</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>org.osgi.service.component</artifactId>
+      <version>${osgi.component.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.osgi</groupId>
-      <artifactId>osgi.cmpn</artifactId>
-      <version>7.0.0</version>
+      <artifactId>org.osgi.service.component.annotations</artifactId>
+      <version>${osgi.component.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.osgi</groupId>
       <artifactId>osgi.annotation</artifactId>
-      <version>8.1.0</version>
+      <version>${osgi.annotation.version}</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+    <groupId>org.apache.felix</groupId>
+    <artifactId>org.apache.felix.prefs</artifactId>
     </dependency>
 
     <!-- FOR TESTS -->
